[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-optimization-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "cvxpy>=1.6.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "rainflow>=3.2.0",
    "scipy>=1.15.3",
]

[tool.setuptools.packages.find]
include = ["models*", "utils*"]
exclude = ["notebooks", "data"]
